--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/prettierrc.json",
   "overrides": [
     {
-      "files": [".prettierrc", ".github/*.yml"],
+      "files": [".prettierrc"],
       "options": { "parser": "json" }
     }
   ]
