--- a/var/net/base.yml
+++ b/var/net/base.yml
@@ -28,7 +28,7 @@ route:
       list: [-direct, -reject, =node]
     filter:
       - type: main
-      - use: world
+      - use: ww
     icon:
       sort: 0
       emoji: 🏳️‍🌈
