--- a/var/rule/r-cn.yml
+++ b/var/rule/r-cn.yml
@@ -1,6 +1,16 @@
 domain:
   - cn
 
+  # gov
+  - e-sscard.com
+  # china mobile
+  - 3gppnetwork.org
+
+  # service
+  - samsungcloudcn.com
+  # alibaba
+  - alipay-eco.com
+
 ipgeo:
   - cn
   - hk
