--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,6 +3,7 @@ name: Out to Pages
 on:
   schedule:
     - cron: 0 0 * * *
+  workflow_dispatch: ~
 concurrency:
   group: pages
   cancel-in-progress: true
@@ -24,13 +25,10 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v6
         with:
-          python-version: "3.12"
+          python-version: "3.14"
           cache: pip
-          cache-dependency-path: |
-            requirements.txt
       - name: Run
-        run: |
-          ./run -a;
+        run: ./run -a;
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
